Ticket #1032 (closed defect: fixed)

Opened 2 years ago

Last modified 2 years ago

sout-keep unusable: gather stream output crashes

Reported by: hatack Assigned to:
Priority: high Milestone: 0.9.0 bugs
Component: Stream output Version: master
Severity: critical Keywords: confirmed
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description (Last modified by courmisch)

Streaming VLC crashes in streaming playlist continuously between files: vlc -v a.mpg b.mpg --sout-keep --sout '#gather:std{access=mmsh,mux=asfh,dst=:8080/stream}'

[00000290] main private: creating httpd
status change: ( new input: a.mpg )
status change: ( audio volume: 256 )
status change: ( play state: 1 )
status change: ( stop state: 0 )
status change: ( new input: b.mpg )
status change: ( audio volume: 256 )
status change: ( play state: 1 )
Segmentation fault

I'v tried many VLC versions (from 0.8.4 to nightly 0.9.0-svn from yesterday) on Ubuntu and RHEL4 with same result: Segfault.

Change History

10/02/07 21:18:01 changed by courmisch

  • description changed.

10/02/07 21:19:47 changed by courmisch

  • status changed from new to closed.
  • resolution set to worksforme.

Cannot reproduce the problem. Possibly dependant on your files, which I do not have anyway.

10/02/07 21:20:19 changed by courmisch

  • status changed from closed to reopened.
  • resolution deleted.

10/02/07 21:32:41 changed by courmisch

  • status changed from reopened to new.
  • owner set to courmisch.

10/02/07 21:32:48 changed by courmisch

  • status changed from new to assigned.

10/02/07 21:32:59 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.

(In [18774]) Fix double free - closes #1032

11/02/07 14:23:44 changed by hatack

  • status changed from closed to reopened.
  • resolution deleted.

This fix doesn't work for me, we are in this condition: {

msg_Dbg( p_stream, "reusing already opened output" ); id->b_used = VLC_TRUE; return id;

} So we never reach cycle with your fix.

19/02/07 21:55:08 changed by courmisch

  • keywords changed from gather stream crash to confirmed.
  • status changed from reopened to new.
  • version changed from 0.8.6a to HEAD.
  • milestone set to 0.9.0 bugs.

19/02/07 21:55:21 changed by courmisch

  • status changed from new to assigned.

19/02/07 22:16:54 changed by courmisch

  • status changed from assigned to new.
  • platform changed from Linux to all.
  • owner deleted.
  • summary changed from Streaming VLC crashes in streaming playlist continuously between files to sout-keep unusable: gather stream output crashes.

No idea how to fix this.

This is Laurent Aimar territory and he is gone.

25/02/07 12:46:07 changed by fenrir

  • status changed from new to closed.
  • resolution set to fixed.

(In [18995]) Fixed stream ouput gather module and renable it (close #1032)