Fix double free - closes #1032