modules/stream_out/gather.c
@@ -150,7 +150,6 @@ static sout_stream_id_t * Add( sout_stream_t *p_stream, es_format_t *p_fmt )
         {
             TAB_REMOVE( p_sys->i_id, p_sys->id, id );
             p_sys->p_out->pf_del( p_sys->p_out, id );
-            free( id );
 
             i = 0;
             continue;
